063 ==> 373500 - digiKam segfaults when tagging face.
064 ==> 362406 - On import renaming by date from file should use exif date and time not modification time as standard.
065 ==> 301936 - Rename by date is based on 'date modified' not 'date created' : add helper text in GUI.
066 ==> 327244 - Automatic album generation produces only lower case album / folder names.
067 ==> 256179 - GPS metadata not stored in JPEG when exporting from raw.
068 ==> 327391 - HUB : add IrfanView tags support.
069 ==> 373272 - No longer shows video previews.
070 ==> 159824 - Show videos in Slideshow.
071 ==> 372755 - CASIO EX-Z750.
072 ==> 366387 - Video (mts and mov) not played (neither from camera nor local file).
073 ==> 348933 - When in slideshow mode digikam can't play video files.
074 ==> 330112 - No Thumbnails for video files - ffmpegthumbnailer works perfectly outside of digikam
075 ==> 222319 - Videos are not played in slideshow.
076 ==> 281718 - Thumbnails only generate for certain video files but not others even though all from same camera on same day.
077 ==> 280755 - Need thumbnail for video items instead of generic icon.
078 ==> 373715 - Renaming popup stays when file with new name already exists.
079 ==> 301029 - Meaningless video preview.
080 ==> 242799 - digiKam segfaults when opening video.
081 ==> 260594 - digiKam crashed when starting video playback.
082 ==> 230985 - digiKam veiwing album click on video file program crashed.
083 ==> 151539 - Usability - scrolling into video takes long time without visual indication to user.
084 ==> 332074 - Crash while playing video and adding a color-tag.
085 ==> 336309 - digiKam crashes when opening video.
086 ==> 335996 - Crash when try opening video.
087 ==> 336594 - digiKam crash when try to look at video.
088 ==> 225731 - digiKam no preview icon for video.
089 ==> 96133  - digiKam to play video.
090 ==> 91538  - Optionally don't generate thumbnails for video files.
091 ==> 